# cargo-benchcmp

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml  cargo-benchcmp  new  old
src/: benchmark.rs  error.rs  iterator.rs  main.rs  utils.rs
tests/: integration.rs
tests/fixtures/: 4_cmp_5_within_threshold.expected  6_cmp_7_within_threshold.expected  6_cmp_7_within_threshold_improvements.expected  6_cmp_7_within_threshold_regressions.expected  bench_output_1.txt  bench_output_2.txt  bench_output_3.txt  bench_output_4.txt  bench_output_5.txt  bench_output_6.txt  bench_output_7.txt  bench_output_8.txt  bench_output_8_repeated.txt  bench_output_fraction.txt  different_input.expected  different_input.windows.expected  different_input_colored.expected  different_input_selections.expected  different_input_selections.windows.expected  empty_results.expected  invalid_arguments.expected  non_overlapping_input.expected  non_overlapping_input.windows.expected  repeated_runs.expected  same_input.expected  same_input.windows.expected  same_input_fractional.expected  usage.expected  zero_improvements.expected  zero_regressions.expected
